
Bug Handling
------------

* Prevent panics during shutdown when a restarting plugin has been restarted
  (issue #957).

* Added support for a Logstreamer symbolically linked log_directory root 
  (issue #741).

* Fixed lots of race conditions in the tests.

* Eliminated race condition in use of global AMQPHub in AMQP input / output
  plugins (#953).

Features
--------

* Added support for '__ignore_root' tag in add_external_plugin to allow
  external packages to be added which do not have any .go files
  in their root directory. (issue #955).

* Switched from using goprotobuf to gogoprotobuf with marshal_all and
  unmarshal_all extensions for significant performance increase.

* Added stats graph sandbox filter to make it easier to generate graphs of
  statsd / graphite metrics (issue #966).

* Added support for the majority of repository URI formats when cloning external
  Go packages (issue #937).

* Added the ability to test for field existence in message matcher (issue #958).

* Added support to ESJSonEncoder and ESLogstashV0Encoder to properly encode
  field arrays.

* Added a filter to monitor all process message failures (issue #948).

* Added UdpOutput.

* Added IrcOutput.

0.6.1 (2014-MM-DD)
==================

Bug Handling
------------

0.6.0 (2014-07-09)
==================

Backwards Incompatibilities
---------------------------

* Go 1.3 now required for building.

* Changed handling of message stream framing. Before stream framing was
  presumed to always be required when encoding with protocol buffers, and not
  required when using other encodings. Now all outputs support an optional
  `use_framing` setting that will determine whether or not framing will be
  applied when using the OutputRunner's Encode method (issue #922).

* All files in a config directory that do not end in ".toml" will now be
  ignored and not loaded as a part of the Heka configuration (issue #750).

* Removed the PayloadJsonDecoder which is replaced by the Lua sandbox cjson