@@ -36,5 +36,8 @@ ESPayloadEncoder
 .. _config_protobufencoder:
 .. include:: /config/encoders/protobuf.rst
 
+.. _config_rstencoder:
+.. include:: /config/encoders/rst.rst
+
 .. _config_sandboxencoder:
 .. include:: /config/encoders/sandbox.rst
